@startuml
interface ISecretRepository {
}
class "IBaseCreateRepository`1"<T> {
}
class "IBaseReadRepository`2"<T1,T2> {
}
class "IBaseDeleteRepository`1"<T> {
}
"IBaseCreateRepository`1" "<Secret>" <|-- ISecretRepository
"IBaseReadRepository`2" "<Secret,int>" <|-- ISecretRepository
"IBaseDeleteRepository`1" "<int>" <|-- ISecretRepository
@enduml
